# flappy_automation_test

flappy_automation_code/: CMakeLists.txt  package.xml
flappy_automation_code/include/flappy_automation_code/: Common.hpp  FlappyController.hpp  Hermite3.hpp  PathPlanner.hpp  SimplePerception.hpp
flappy_automation_code/launch/: flappy_automation_code_cpp.launch
flappy_automation_code/rviz/: config.rviz
flappy_automation_code/src/: Common.cpp  FlappyController.cpp  PathPlanner.cpp  SimplePerception.cpp  flappy_automation_code.cpp
